--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Internet Banking My Bank"
-    />
-
+    <meta name="description" content="Internet Banking My Bank"/>
     <title>My Bank - Internet Banking</title>
   </head>
   <body>
